created method findPath in MapViewModel, fixed the paths in Game and MessageHandler classes (they work now on windows and mac automatically), added TODO in ChatViewModel